tests/baselines/reference/pathMappingBasedModuleResolution8_node.errors.txt
c:/root/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== c:/root/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "@speedy/*/testing": [
                   "*/dist/index.ts"
                ]
            }
        }
    }
    
==== c:/root/index.ts (0 errors) ====
    import {x} from "@speedy/folder1/testing"
    
==== c:/root/folder1/dist/index.ts (0 errors) ====
    export const x = 1 + 2;
    